# fake-news-detector

./: .gitignore  .vercelignore  README.md  app.py  deploy.sh  news-app.service  nginx.conf  preprocess.py  pyproject.toml  requirements.txt  vercel.json
model/: logistic_model.pkl  tfidf_vectorizer.pkl
scripts/: smoke_test.py
static/: app.js  styles.css
templates/: index.html
