[project]
name = "fake-news-detector"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

# Dependencies matched to requirements.txt so Vercel installs them when using pyproject.toml
dependencies = [
	"Flask==2.3.0",
	"scikit-learn==1.3.0",
	"nltk==3.8.1",
	"gunicorn==21.2.0",
	"numpy==1.26.4",
	"scipy==1.16.2",
	"requests==2.31.0"
]
